[package]
author = "E.Munkherdene"
name = "Cecile"
categories = ["programming-language", "compiler", "vm", "interpreter", "language-server"]
description = "Cecile Programming Language that is designed to be simple, fast"
edition = "2021"
keywords = [
    "compiler",
    "interpreter",
    "language",
    "cecile",
    "vm",
]
license = "MIT"
repository = "https://github.com/Hollowloki/Cecile"
rust-version = "1.74"
version = "0.1.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
pprof = ["dep:pprof"]

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.20.0"

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
logos = "0.13.0"
termcolor = "1.2.0"
iota = "0.2.3"
mimalloc = "0.1.39"
hashbrown = { version = "0.13.1", default-features = false, features = [
    "inline-more",
] }
rustc-hash = "1.1.0"
arrayvec = "0.7.4"
anyhow = "1.0.75"
thiserror = "1.0.49"
rand = "0.8.5"
codespan-reporting = "0.11.1"
reedline = { version = "0.26.0" }
dirs = { version = "5.0.0" }
tree-sitter = { version = "0.20.4" }
tree-sitter-highlight = { version = "0.20.1" }
nu-ansi-term = { version = "0.47.0"}

 
pprof = { version = "0.13.0", features = [
    "cpp",
    "flamegraph",
    "prost-codec",
], optional = true }

