[package]
author = "E.Munkherdene"
name = "Cecile"
categories = ["programming-language", "compilers", "vm", "interpreter", "language-server"]
description = "Cecile Programming Language that is designed to be simple, fast"
edition = "2021"
keywords = [
    "compiler",
    "interpreter",
    "programming-language",
    "cecile",
    "vm",
]
license = "MIT"
repository = "https://github.com/Hollowloki/Cecile"
rust-version = "1.74"
version = "0.1.7"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["optimize", "repl"]
pprof = ["dep:pprof"]
optimize = []
repl = [
    "dep:dirs",
    "dep:nu-ansi-term",
    "dep:reedline",
    "dep:tree-sitter",
    "dep:tree-sitter-highlight",
]

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]

clap = { version = "4.4.10", features = ["derive"] }
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
logos = "0.13.0"
termcolor = "1.2.0"
iota = "0.2.3"

hashbrown = { version = "0.13.1", default-features = false, features = [
    "inline-more",
] }
rustc-hash = "1.1.0"
arrayvec = "0.7.4"
anyhow = "1.0.75"
thiserror = "1.0.49"
codespan-reporting = "0.11.1"
reedline = { version = "0.26.0", optional = true }
dirs = { version = "5.0.0", optional = true }
tree-sitter = { version = "0.20.4", optional = true }
tree-sitter-highlight = { version = "0.20.1", optional = true }
nu-ansi-term = { version = "0.47.0", optional = true }

rand = { version = "0.6.5", features = ["wasm-bindgen"] }

pprof = { version = "0.13.0", features = [
    "cpp",
    "flamegraph",
    "prost-codec",
], optional = true }


[dev-dependencies]
pretty_assertions = "1.4.0"
test-generator = "0.3.1"


[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.67"

[target.'cfg(not(any(miri, target_family = "wasm")))'.dependencies]
mimalloc = { version = "0.1.27", default-features = false }


[lib]
doctest = false
