[package]
name = "cecile_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
askama_escape = "0.10.3"
console_error_panic_hook = "0.1.7"
Cecile = { path = "../../../../", default-features = false }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
termcolor = "1.2.0"
wasm-bindgen = "0.2.84"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']
